@@ -89,3 +89,5 @@ JSON parse premature end of u 0
 JSON parse bad hex after u 0
 JSONHandler unhandled value 0
 JSONHandler unexpected key 0
+JSON schema other type 0
+JSON optional key 0
